# vcmi-pre-commit

./: .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish_version.yml
hooks/: json_check.py
