[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "vcmi-pre-commit"
version = "0.0.1"
description = "pre-commit hooks for VCMI"
readme = "README.md"
keywords = [
    "pre-commit",
    "vcmi",
]
license = { file = "LICENSE" }
authors = [{ name = "Kamil Krześ"}]
requires-python = ">=3.8"
dependencies = [
    "jstyleson",
]

[project.scripts]
json_check = "hooks.json_check:main"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
namespaces = false